_docs/archive/wallabag/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
    app.kubernetes.io/instance: wallabag-${ENVIRONMENT}
    app.kubernetes.io/version: "${WALLABAG_VERSION}"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: wallabag
    node: worker
