_docs/archive/wallabag/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag-internal
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
    app.kubernetes.io/instance: wallabag-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: networking
  hostnames:
    - "${WALLABAG_SUBDOMAIN}.home-0ps.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wallabag
          port: 80
---
